--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.6",
     "vite-plugin-windicss": "^1.9.3"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2"
   }
 }
