--- a/server/sequelize/config/config.json
+++ b/server/sequelize/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "url": "",
+    "url": "postgres://cybkrxkr:ZV2AmxkTK1HqZD1R9LckWuq-RpQWBpab@cornelius.db.elephantsql.com/cybkrxkr",
     "dialect": "postgres"
   },
   "test": {
