--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
     "mysql2": "^3.9.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
