--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.1",
-    "winston": "^3.13.0"
+    "sequelize": "^6.37.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
