--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
     "helmet": "^7.1.0",
     "mysql2": "^3.9.3",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
