--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.6.8",
     "react-router-dom": "^6.22.3"
   }
 }
