--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
